--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ ul  {
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+<link rel="stylesheet" href="GroupProject.css">
 </head>
 <body>
 
